@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-20T00:49:41Z",
-  "count_outdated" : 407,
-  "uniques_outdated" : 24,
+  "timestamp" : "2022-06-22T16:12:25Z",
+  "count_outdated" : 408,
+  "uniques_outdated" : 25,
   "count" : 424,
   "uniques" : 30,
   "views" : [
-    {
-      "timestamp": "2022-06-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-10T00:00:00Z",
       "count": 2,
