@@ -1,12 +1,7 @@
 {
-  "count": 17,
+  "count": 16,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-06-08T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-10T00:00:00Z",
       "count": 2,
